@@ -11,22 +11,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.96.tar.gz 37846686 RMD160 d980f7f8ec6c646a9b741718284b081987f9d73c SHA1 e2942bdbf693a0814fcc3b34d5ae55765d5d4ad8 SHA256 a9fa904e00e09d8b68e701edda208bd274053d26d0b50d97d6c977084e5c307d
-EBUILD emacs-cvs-22.0.96.ebuild 7365 RMD160 a805abf46e598c178259ec97db6b655ad4e0370b SHA1 7d84fe5571a5ac3bd5349b9a6a29a06c8d87e1d0 SHA256 fb5fa61187629d721746de1f1b440ccaf5e9e45bd255d8bcafc1766c45d79021
-MD5 1cdc346ee02af7b06e66a9bb7ecba5a0 emacs-cvs-22.0.96.ebuild 7365
-RMD160 a805abf46e598c178259ec97db6b655ad4e0370b emacs-cvs-22.0.96.ebuild 7365
-SHA256 fb5fa61187629d721746de1f1b440ccaf5e9e45bd255d8bcafc1766c45d79021 emacs-cvs-22.0.96.ebuild 7365
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 7683 RMD160 19cfcceaf762d3919cd87ccfeb695f422aec804d SHA1 3d77aff4ff980e3e3e7bccf7225154373d360503 SHA256 7f2234a496e08960260ab2255b803a6c768dfedcaa7113ba919ac0891be25597
-MD5 bf1ab2b2fe72521fdcca5d04ab436698 emacs-cvs-22.0.9999-r8.ebuild 7683
-RMD160 19cfcceaf762d3919cd87ccfeb695f422aec804d emacs-cvs-22.0.9999-r8.ebuild 7683
-SHA256 7f2234a496e08960260ab2255b803a6c768dfedcaa7113ba919ac0891be25597 emacs-cvs-22.0.9999-r8.ebuild 7683
-EBUILD emacs-cvs-23.0.0-r4.ebuild 7941 RMD160 a4e387ed9034c5a61f1f27e755b6634920a187ef SHA1 c0864dd3bc303f480f9553255436c6ad33526464 SHA256 cafd10507bc57afd6117b4ffa9ac33e58163c1bdee169f57ce8d9e1d59976a46
-MD5 54aa57495f375a0755327776baa5578e emacs-cvs-23.0.0-r4.ebuild 7941
-RMD160 a4e387ed9034c5a61f1f27e755b6634920a187ef emacs-cvs-23.0.0-r4.ebuild 7941
-SHA256 cafd10507bc57afd6117b4ffa9ac33e58163c1bdee169f57ce8d9e1d59976a46 emacs-cvs-23.0.0-r4.ebuild 7941
-MISC ChangeLog 7853 RMD160 fd9eebdee391cec787e86b4242cb4e55fef2165e SHA1 cb7955495f55ba06b53c8c3c43b7c174dacba7c9 SHA256 fc95606ce636c260187c637e3dc911a9472d73caec02819b03b367e66ae061c8
-MD5 577b6f18d53db10df7320557db222aa1 ChangeLog 7853
-RMD160 fd9eebdee391cec787e86b4242cb4e55fef2165e ChangeLog 7853
-SHA256 fc95606ce636c260187c637e3dc911a9472d73caec02819b03b367e66ae061c8 ChangeLog 7853
+EBUILD emacs-cvs-22.0.96.ebuild 7529 RMD160 c471423d46c29e97bc2d300117e08d45b0fbe6dc SHA1 8f9b796db0d85ed348b84bd46e516aaa05fd53ac SHA256 f942a83a860bb28d20bcd5b326e8d45506e82031682a697e1028eb66dcb5da01
+MD5 d1804de5b5099077f7611ef97cffb7be emacs-cvs-22.0.96.ebuild 7529
+RMD160 c471423d46c29e97bc2d300117e08d45b0fbe6dc emacs-cvs-22.0.96.ebuild 7529
+SHA256 f942a83a860bb28d20bcd5b326e8d45506e82031682a697e1028eb66dcb5da01 emacs-cvs-22.0.96.ebuild 7529
+EBUILD emacs-cvs-22.0.9999-r8.ebuild 7847 RMD160 8aa7d105b4d237a95c9c282d4892c0e3c119363c SHA1 221ceaf144cdc2ba68651fbf8a349f60c119bb2f SHA256 066a62f29b578d43e9249367d9ad25e1c1570fb5c669c2999afeefb583d4723e
+MD5 8f69712930456221e8fc8d05d48ff410 emacs-cvs-22.0.9999-r8.ebuild 7847
+RMD160 8aa7d105b4d237a95c9c282d4892c0e3c119363c emacs-cvs-22.0.9999-r8.ebuild 7847
+SHA256 066a62f29b578d43e9249367d9ad25e1c1570fb5c669c2999afeefb583d4723e emacs-cvs-22.0.9999-r8.ebuild 7847
+EBUILD emacs-cvs-23.0.0-r4.ebuild 8105 RMD160 0d81bbe3435f4cf07af4a30b7d6c512d3d969743 SHA1 42a6bfc41f9369033dfc48affb7d5aacb044242b SHA256 58e3a679090aba7ff71c471506219a2eeefea8c3014ac1f501b1cedfc0864d95
+MD5 3cff836a6531c6536bcc4df512e8c40b emacs-cvs-23.0.0-r4.ebuild 8105
+RMD160 0d81bbe3435f4cf07af4a30b7d6c512d3d969743 emacs-cvs-23.0.0-r4.ebuild 8105
+SHA256 58e3a679090aba7ff71c471506219a2eeefea8c3014ac1f501b1cedfc0864d95 emacs-cvs-23.0.0-r4.ebuild 8105
+MISC ChangeLog 8037 RMD160 91a26e766c20f85734527115a78a4e47ae26a732 SHA1 e0084cb62d34b7a02ec148f6fd24f06316b8f14a SHA256 2ec460bb02eaca9024e3005311097af1f86197b3b2212bc14bfa70765e361435
+MD5 95e8579f7a001e353715283a3dfc85e3 ChangeLog 8037
+RMD160 91a26e766c20f85734527115a78a4e47ae26a732 ChangeLog 8037
+SHA256 2ec460bb02eaca9024e3005311097af1f86197b3b2212bc14bfa70765e361435 ChangeLog 8037
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
