@@ -2,6 +2,11 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
+  emacs-cvs-22.0.96.ebuild, emacs-cvs-22.0.9999-r8.ebuild,
+  emacs-cvs-23.0.0-r4.ebuild:
+  Rebuild Info dir file in pkg_postinst.
+
   26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   emacs-cvs-22.0.9999-r8.ebuild:
   readded the lost configuration line for USE=gtk
